.provarCaches/00D410000011HE0EAM/objects/rstk__polinemfr__c.object
<CustomObject>
    <description>polinemfr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid or the externalid field itself is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__polinemfr_poline__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__polinemfr_peitemmfr__r.rstk__externalid__c</formula>
        <inlineHelpText>This is an internal system field used to define the external ID of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__polinemfr_poline__r.Name &amp; &apos;_&apos; &amp; rstk__polinemfr_peitemmfr__r.Name</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polinemfr_mfritemdesc__c</fullName>
        <formula>rstk__polinemfr_peitemmfr__r.rstk__peitemmfr_mfritemdesc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Manufacturer&apos;s Item Description</inlineHelpText>
        <label>Mfr Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polinemfr_mfritemid__c</fullName>
        <formula>rstk__polinemfr_peitemmfr__r.rstk__peitemmfr_mfritemid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Manufacturer&apos;s Item Identification</inlineHelpText>
        <label>Mfr Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polinemfr_mfritemno__c</fullName>
        <formula>rstk__polinemfr_peitemmfr__r.rstk__peitemmfr_mfritemno__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Manufacturer&apos;s Item Number</inlineHelpText>
        <label>Manufacturer Item No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polinemfr_mfrname__c</fullName>
        <formula>rstk__polinemfr_peitemmfr__r.rstk__peitemmfr_mfrname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Approved Manufacturer&apos;s Name</inlineHelpText>
        <label>Manufacturer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__polinemfr_peitemmfr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the  Approved Manufacturer associated with this  Item number.</inlineHelpText>
        <label>Approved Manufacturer by Item</label>
        <referenceTo>rstk__peitemmfr__c</referenceTo>
        <relationshipLabel>PO Line Approved Manufacturers</relationshipLabel>
        <relationshipName>peitemmfrs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__polinemfr_poline__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the PO Line Number associated with the item/manufacturer.</inlineHelpText>
        <label>PO Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipLabel>PO Line Approved Manufacturers</relationshipLabel>
        <relationshipName>polinemfrs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Line Approved Manufacturer</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PO Line Approved Manufacturer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Line Approved Manufacturers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>